# external-sorting-algorithms-experiment

./: .gitignore  CMakeLists.txt  LICENSE  Main.cpp  Main02.cpp  Main03.cpp  README.md  build.sh  funcoes_gerais.cpp  funcoes_gerais.h  funcoes_ordenacao_balanceada.cpp  funcoes_ordenacao_balanceada.h  funcoes_ordenacao_polifasica.cpp  funcoes_ordenacao_polifasica.h  funcoes_secundarias.cpp  funcoes_secundarias.h  input-B01.txt  main.cpp
backup/: main_backup_arquivo_unico_estavel.cpp  main_reynan.cpp
emulacao/: CMakeLists.txt  build.sh
emulacao/include/: estruturas.h  funcoes_gerais.h  funcoes_ordenacao_balanceada.h  funcoes_ordenacao_cascata.h  funcoes_ordenacao_polifasica.h  funcoes_secundarias.h
emulacao/inputs/: input-C01.txt
emulacao/src/: funcoes_gerais.cpp  funcoes_ordenacao_polifasica.cpp  funcoes_secundarias.cpp  main.cpp
include/: estruturas.h  funcoes_gerais.h  funcoes_ordenacao_polifasica.h  funcoes_secundarias.h
inputs/: input-P01.txt
src/: funcoes_gerais.cpp  funcoes_ordenacao_balanceada.cpp  funcoes_ordenacao_cascata.cpp  funcoes_ordenacao_polifasica.cpp  funcoes_secundarias.cpp  main.cpp
